# Syinx

./: README.md
Shard/wlib/libevent/Debug/: event.exp  event.lib  event_core.exp  event_extra.exp  event_extra.lib  event_openssl.exp
Shard/wlib/libevent/Release/: event.exp  event_core.exp  event_core.lib  event_extra.exp  event_openssl.exp  event_openssl.lib
Shard/wlib/mysql/: DataBase.lib
Syinx/: CMakeLists.txt  MakeInstall.sh  main.cpp
Syinx/Player/: CPlayer.cpp  CPlayer.h
Syinx/Syinx/: GameObject.h  SConnect.cpp  SConnect.h  SyInc.h  SyResAdapter.cpp  SyResAdapter.h  SyTaskAdapter.cpp  SyTaskAdapter.h  Syinx.cpp  Syinx.h
Syinx/Sylog/: easylogging++.h
Syinx/conf/: Syinx-Server.config.json  Syinx-Server.logger.conf
Syinx/module/: SyPthreadPool.cpp  SyPthreadPool.h
code/Syinx/: CMakeLists.txt  main.cpp
code/Syinx/Player/: CPlayer.cpp  CPlayer.h
code/Syinx/Syinx/: SConnect.cpp  SyMysqlConPool.cpp  SyPthreadPool.cpp  SyResAdapter.cpp  SyTaskAdapter.cpp  Syinx.cpp
code/Syinx/Syinx/include/: GameObject.h  SConnect.h  SyInc.h  SyMysqlConPool.h  SyPthreadPool.h  SyResAdapter.h  SyTaskAdapter.h  Syinx.h  Tools.hpp
